--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -259,15 +259,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dictionary(1000 unique tokens: ['', 'little', 'another', 'ramp', 'keyboard']...)\n",
-      "Dictionary(1000 unique tokens: ['', 'little', 'another', 'ramp', 'keyboard']...)\n"
+      "Dictionary(1000 unique tokens: ['', 'wagon,', 'bridge', 'pocket', 'animals']...)\n",
+      "Dictionary(1000 unique tokens: ['', 'wagon,', 'bridge', 'pocket', 'animals']...)\n"
      ]
     },
     {
@@ -309,7 +309,7 @@
        "      <td>CONTRADICTION</td>\n",
        "      <td>2</td>\n",
        "      <td>[&lt;s&gt;, The, young, boys, are, playing, outdoors, and, the, man, is, smiling, nearby, &lt;sep&gt;, There...</td>\n",
-       "      <td>[1, 24, 31, 8, 25, 16, 27, 6, 18, 13, 11, 29, 1000, 2, 102, 11, 22, 150, 16, 27, 6, 23, 11, 22, ...</td>\n",
+       "      <td>[1, 24, 31, 8, 25, 16, 27, 6, 18, 13, 11, 29, 1000, 2, 100, 11, 22, 148, 16, 27, 6, 23, 11, 22, ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -329,7 +329,7 @@
        "      <td>NEUTRAL</td>\n",
        "      <td>0</td>\n",
        "      <td>[&lt;s&gt;, Four, children, are, doing, backbends, in, the, gym, &lt;sep&gt;, Four, girls, are, doing, backb...</td>\n",
-       "      <td>[1, 108, 20, 25, 45, 1000, 10, 18, 110, 2, 108, 112, 25, 45, 1000, 6, 16, 27, 0]</td>\n",
+       "      <td>[1, 106, 20, 25, 45, 1000, 10, 18, 108, 2, 106, 110, 25, 45, 1000, 6, 16, 27, 0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -339,7 +339,7 @@
        "      <td>NEUTRAL</td>\n",
        "      <td>0</td>\n",
        "      <td>[&lt;s&gt;, A, player, is, throwing, the, ball, &lt;sep&gt;, Two, teams, are, competing, in, a, football, ma...</td>\n",
-       "      <td>[1, 3, 65, 11, 597, 18, 55, 2, 32, 119, 25, 118, 10, 4, 116, 1000, 0]</td>\n",
+       "      <td>[1, 3, 65, 11, 594, 18, 55, 2, 32, 117, 25, 116, 10, 4, 114, 1000, 0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -349,7 +349,7 @@
        "      <td>NEUTRAL</td>\n",
        "      <td>0</td>\n",
        "      <td>[&lt;s&gt;, Five, children, are, standing, in, front, of, a, wooden, hut, &lt;sep&gt;, Five, children, are, ...</td>\n",
-       "      <td>[1, 120, 20, 25, 17, 10, 40, 14, 4, 122, 1000, 2, 120, 20, 25, 17, 10, 4, 122, 1000, 0]</td>\n",
+       "      <td>[1, 118, 20, 25, 17, 10, 40, 14, 4, 120, 1000, 2, 118, 20, 25, 17, 10, 4, 120, 1000, 0]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -357,11 +357,11 @@
       ],
       "text/plain": [
        "   pair_ID                                                         sentence_A                                                    sentence_B entailment_judgment  entailment_id                                                                                          sentence_AB                                                                                             word_idx\n",
-       "0        4  The young boys are playing outdoors and the man is smiling nearby  There is no boy playing outdoors and there is no man smiling       CONTRADICTION              2  [<s>, The, young, boys, are, playing, outdoors, and, the, man, is, smiling, nearby, <sep>, There...  [1, 24, 31, 8, 25, 16, 27, 6, 18, 13, 11, 29, 1000, 2, 102, 11, 22, 150, 16, 27, 6, 23, 11, 22, ...\n",
+       "0        4  The young boys are playing outdoors and the man is smiling nearby  There is no boy playing outdoors and there is no man smiling       CONTRADICTION              2  [<s>, The, young, boys, are, playing, outdoors, and, the, man, is, smiling, nearby, <sep>, There...  [1, 24, 31, 8, 25, 16, 27, 6, 18, 13, 11, 29, 1000, 2, 100, 11, 22, 148, 16, 27, 6, 23, 11, 22, ...\n",
        "1       24          A person in a black jacket is doing tricks on a motorbike             A skilled person is riding a bicycle on one wheel             NEUTRAL              0  [<s>, A, person, in, a, black, jacket, is, doing, tricks, on, a, motorbike, <sep>, A, skilled, p...       [1, 3, 50, 10, 4, 44, 46, 11, 45, 52, 48, 4, 47, 2, 3, 1000, 50, 11, 51, 4, 43, 48, 49, 53, 0]\n",
-       "2      105                       Four children are doing backbends in the gym           Four girls are doing backbends and playing outdoors             NEUTRAL              0  [<s>, Four, children, are, doing, backbends, in, the, gym, <sep>, Four, girls, are, doing, backb...                     [1, 108, 20, 25, 45, 1000, 10, 18, 110, 2, 108, 112, 25, 45, 1000, 6, 16, 27, 0]\n",
-       "3      116                                      A player is throwing the ball                   Two teams are competing in a football match             NEUTRAL              0  [<s>, A, player, is, throwing, the, ball, <sep>, Two, teams, are, competing, in, a, football, ma...                                [1, 3, 65, 11, 597, 18, 55, 2, 32, 119, 25, 118, 10, 4, 116, 1000, 0]\n",
-       "4      119                Five children are standing in front of a wooden hut                    Five children are standing in a wooden hut             NEUTRAL              0  [<s>, Five, children, are, standing, in, front, of, a, wooden, hut, <sep>, Five, children, are, ...              [1, 120, 20, 25, 17, 10, 40, 14, 4, 122, 1000, 2, 120, 20, 25, 17, 10, 4, 122, 1000, 0]"
+       "2      105                       Four children are doing backbends in the gym           Four girls are doing backbends and playing outdoors             NEUTRAL              0  [<s>, Four, children, are, doing, backbends, in, the, gym, <sep>, Four, girls, are, doing, backb...                     [1, 106, 20, 25, 45, 1000, 10, 18, 108, 2, 106, 110, 25, 45, 1000, 6, 16, 27, 0]\n",
+       "3      116                                      A player is throwing the ball                   Two teams are competing in a football match             NEUTRAL              0  [<s>, A, player, is, throwing, the, ball, <sep>, Two, teams, are, competing, in, a, football, ma...                                [1, 3, 65, 11, 594, 18, 55, 2, 32, 117, 25, 116, 10, 4, 114, 1000, 0]\n",
+       "4      119                Five children are standing in front of a wooden hut                    Five children are standing in a wooden hut             NEUTRAL              0  [<s>, Five, children, are, standing, in, front, of, a, wooden, hut, <sep>, Five, children, are, ...              [1, 118, 20, 25, 17, 10, 40, 14, 4, 120, 1000, 2, 118, 20, 25, 17, 10, 4, 120, 1000, 0]"
       ]
      },
      "execution_count": 6,
@@ -383,14 +383,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dictionary(1000 unique tokens: ['', 'little', 'another', 'ramp', 'keyboard']...)\n"
+      "Dictionary(1000 unique tokens: ['', 'wagon,', 'bridge', 'pocket', 'animals']...)\n"
      ]
     },
     {
@@ -432,7 +432,7 @@
        "      <td>NEUTRAL</td>\n",
        "      <td>0</td>\n",
        "      <td>[&lt;s&gt;, There, is, no, boy, playing, outdoors, and, there, is, no, man, smiling, &lt;sep&gt;, A, group, ...</td>\n",
-       "      <td>[1, 102, 11, 22, 150, 16, 27, 6, 23, 11, 22, 13, 29, 2, 3, 9, 14, 12, 11, 16, 10, 4, 19, 6, 5, 1...</td>\n",
+       "      <td>[1, 100, 11, 22, 148, 16, 27, 6, 23, 11, 22, 13, 29, 2, 3, 9, 14, 12, 11, 16, 10, 4, 19, 6, 5, 1...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -462,7 +462,7 @@
        "      <td>ENTAILMENT</td>\n",
        "      <td>1</td>\n",
        "      <td>[&lt;s&gt;, A, brown, dog, is, attacking, another, animal, in, front, of, the, tall, man, in, pants, &lt;...</td>\n",
-       "      <td>[1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 270, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36...</td>\n",
+       "      <td>[1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 268, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -487,10 +487,10 @@
        "4       11                        A brown dog is attacking another animal in front of the man in pants                 A brown dog is helping another animal in front of the man in pants             NEUTRAL              0  [<s>, A, brown, dog, is, attacking, another, animal, in, front, of, the, man, in, pants, <sep>, ...   \n",
        "\n",
        "                                                                                              word_idx  \n",
-       "0  [1, 102, 11, 22, 150, 16, 27, 6, 23, 11, 22, 13, 29, 2, 3, 9, 14, 12, 11, 16, 10, 4, 19, 6, 5, 1...  \n",
+       "0  [1, 100, 11, 22, 148, 16, 27, 6, 23, 11, 22, 13, 29, 2, 3, 9, 14, 12, 11, 16, 10, 4, 19, 6, 5, 1...  \n",
        "1  [1, 3, 9, 14, 8, 10, 4, 19, 11, 16, 6, 4, 13, 11, 17, 10, 18, 7, 2, 24, 31, 8, 25, 16, 27, 6, 18...  \n",
        "2  [1, 3, 9, 14, 20, 11, 16, 10, 18, 21, 6, 23, 11, 22, 13, 17, 10, 18, 7, 2, 24, 31, 8, 25, 16, 27...  \n",
-       "3  [1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 270, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36...  \n",
+       "3  [1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 268, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36...  \n",
        "4  [1, 3, 38, 39, 11, 1000, 37, 36, 10, 40, 14, 18, 13, 10, 41, 2, 3, 38, 39, 11, 1000, 37, 36, 10,...  "
       ]
      },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -720,12 +720,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Evaluate helpers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def confusion_scores(total_labels, total_pred):\n",
+    "    classes = [\"NEUTRAL\", \"ENTAILMENT\", \"CONTRADICTION\"]\n",
+    "    title='Confusion matrix'\n",
+    "    \n",
+    "    cm = confusion_matrix(total_labels, total_pred, labels=[2, 1, 0])\n",
+    "    \n",
+    "    plt.imshow(cm, interpolation='nearest', cmap=plt.cm.Blues)\n",
+    "    plt.title(title)\n",
+    "    plt.colorbar()\n",
+    "    tick_marks = np.arange(len(classes))\n",
+    "    plt.xticks(tick_marks, classes, rotation=45)\n",
+    "    plt.yticks(tick_marks, classes)\n",
+    "\n",
+    "    thresh = cm.max() / 2.\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        plt.text(j, i, format(cm[i, j], 'd'),\n",
+    "                 horizontalalignment=\"center\",\n",
+    "                 color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "\n",
+    "    plt.ylabel('True label')\n",
+    "    plt.xlabel('Predicted label')\n",
+    "    plt.tight_layout()\n",
+    "\n",
+    "\n",
+    "def evaluate(model, loader):\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        total_labels = []\n",
+    "        total_pred = []\n",
+    "        for _, (data, target) in enumerate(loader):\n",
+    "\n",
+    "                data = data.to(device)\n",
+    "                target = target.to(device)\n",
+    "\n",
+    "                idx_sentences = data.view(-1)\n",
+    "                output = rnn(idx_sentences)[0]\n",
+    "\n",
+    "                # Get the Accuracy\n",
+    "                _, predicted = torch.max(output.data, dim=1)\n",
+    "                correct = (predicted == target).sum().item()\n",
+    "                \n",
+    "                total_labels.append(list(target.cpu().numpy()))\n",
+    "                total_pred.append(list(predicted.cpu().numpy()))\n",
+    "\n",
+    "                \n",
+    "        return confusion_scores(total_labels, total_pred)\n",
+    "                "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# To DataLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,19 +799,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO, use this insted\n",
     "train_loader = DataLoader(dataset=sick_dataset_train,\n",
     "                          batch_size=1, shuffle=True)\n",
     "\n",
     "dev_loader = DataLoader(dataset=sick_dataset_dev,\n",
-    "                          batch_size=1, shuffle=True)\n",
+    "                          batch_size=1, shuffle=False)\n",
     "\n",
     "test_loader = DataLoader(dataset=sick_dataset_test,\n",
-    "                          batch_size=1, shuffle=True)"
+    "                          batch_size=1, shuffle=False)"
    ]
   },
   {
@@ -758,18 +822,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Train Epoch: [1/2] | Step [ 4401/4500 (98%)] | Loss: 0.6828 | Accuracy: 53.9073% \n",
-      " Train Epoch: [2/2] | Step [ 4401/4500 (98%)] | Loss: 2.5501 | Accuracy: 53.9300% \n",
-      "Learning finished!\n",
-      "CPU times: user 41.7 s, sys: 1.78 s, total: 43.5 s\n",
-      "Wall time: 43.4 s\n"
+      " Train Epoch: [1/2] | Step [ 4401/4500 (98%)] | Loss: 0.9760 | Accuracy: 54.0663% \n",
+      " Train Epoch: [2/2] | Step [  501/4500 (11%)] | Loss: 1.5703 | Accuracy: 52.7888% "
      ]
     }
    ],
@@ -842,53 +903,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Step [  401/500 (80%)] | Accuracy: 54.9751% CPU times: user 736 ms, sys: 4 ms, total: 740 ms\n",
-      "Wall time: 735 ms\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%time\n",
     "\n",
-    "total_correct = 0\n",
-    "total_target = 0\n",
-    "for batch_idx, (data, target) in enumerate(dev_loader):\n",
-    "        \n",
-    "        data = data.to(device)\n",
-    "        target = target.to(device)\n",
-    "        \n",
-    "        idx_sentences = data.view(-1)\n",
-    "        if verbose:\n",
-    "            print('idx_sentences', idx_sentences.size())\n",
-    "                \n",
-    "        target = target\n",
-    "        if verbose:\n",
-    "            print('target', target)\n",
-    "        \n",
-    "        output = rnn(idx_sentences)[0]\n",
-    "        if verbose:\n",
-    "            print('output', output)\n",
-    "        \n",
-    "        # Get the Accuracy\n",
-    "        _, predicted = torch.max(output.data, dim=1)\n",
-    "        correct = (predicted == target).sum().item()\n",
-    "        \n",
-    "        total_correct += correct\n",
-    "        total_target += target.size(0)\n",
-    "        \n",
-    "        if batch_idx % 100 == 0 or batch_idx % 100 == 1 :\n",
-    "            print('\\r Step [{:5}/{} ({:.0f}%)] | Accuracy: {:.4f}%'.format(\n",
-    "                    batch_idx * len(data), \n",
-    "                    len(dev_loader.dataset),\n",
-    "                    100. * batch_idx / len(dev_loader), \n",
-    "                    (total_correct / total_target) * 100), end=' ')"
+    "evaluate(rnn, dev_loader)"
    ]
   },
   {
@@ -900,61 +921,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Step [ 4901/4927 (99%)] | Accuracy: 56.6707% CPU times: user 7.12 s, sys: 92 ms, total: 7.21 s\n",
-      "Wall time: 7.17 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "total_correct = 0\n",
-    "total_target = 0\n",
-    "for batch_idx, (data, target) in enumerate(test_loader):\n",
-    "        \n",
-    "        data = data.to(device)\n",
-    "        target = target.to(device)\n",
-    "        \n",
-    "        idx_sentences = data.view(-1)\n",
-    "        if verbose:\n",
-    "            print('idx_sentences', idx_sentences.size())\n",
-    "                \n",
-    "        target = target\n",
-    "        if verbose:\n",
-    "            print('target', target)\n",
-    "        \n",
-    "        output = rnn(idx_sentences)[0]\n",
-    "        if verbose:\n",
-    "            print('output', output)\n",
-    "        \n",
-    "        # Get the Accuracy\n",
-    "        _, predicted = torch.max(output.data, dim=1)\n",
-    "        correct = (predicted == target).sum().item()\n",
-    "        \n",
-    "        total_correct += correct\n",
-    "        total_target += target.size(0)\n",
-    "        \n",
-    "        if batch_idx % 100 == 0 or batch_idx % 100 == 1 :\n",
-    "            print('\\r Step [{:5}/{} ({:.0f}%)] | Accuracy: {:.4f}%'.format(\n",
-    "                    batch_idx * len(data), \n",
-    "                    len(test_loader.dataset),\n",
-    "                    100. * batch_idx / len(test_loader), \n",
-    "                    (total_correct / total_target) * 100), end=' ')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%%time\n",
+    "\n",
+    "evaluate(rnn, test_loader)"
+   ]
   }
  ],
  "metadata": {
